--- a/less/main.less
+++ b/less/main.less
@@ -24,20 +24,25 @@
     font-style: normal;
     font-display: swap;
 }
-
+body.page-template-inicio, body.page-template-organizamos, body.page-template-nosotros{
 .row {
     
     display: inherit;
 }
+}
 /* Ajustes generales de la plantilla */
-.whb-scroll-stick .woodmart-logo img {  
+ .woodmart-logo img {  
  
-    max-height: 61px;
-    margin-top: 4px;
-        transform: scale(1.4) translateY(17px);
+        transform: scale(1.4) translateY(-2px);
+}
+.whb-row.whb-general-header.whb-not-sticky-row.whb-without-bg.whb-without-border.whb-color-dark.whb-flex-equal-sides {
+    padding: 20px;
 }
 @import "vars";
-
+.main-page-wrapper {
+  
+    padding-top: 0px;
+}
 
 /*Ajuste de FullWidth*/
 
@@ -49,8 +54,10 @@
 }
 .whb-color-dark .navigation-style-underline .item-level-0>a {
     font-family: 'Gotham Light'!important;
- //   color: @gris;
-    font-size: 18px;
+     color: @gris;
+    font-size: 16px;
+        position: relative;
+        top: 37px;
 }
 
 /*Esquema por defecto para las secciones*/
@@ -63,6 +70,9 @@
     }
     .col2 {
             width: 33.33%;
+    }
+    .col3 {
+            width: 25%;
     }
 }
 
@@ -90,12 +100,17 @@ ol {
         min-height: 500px;
         padding: 60px;
     }
+    .col3 {
+        min-height: 500px;
+        padding: 60px;
+    }
     
     h1 {
         color: @rosa;
          font-family: 'Gotham Bold';
         text-align: center;
             font-size: 68px;
+        text-transform: uppercase;
        
         b {
              font-family: 'Gotham Light';
@@ -111,7 +126,7 @@ ol {
     h2 {
          font-family: 'Gotham Bold';
         color: @rosa;
-        
+        text-transform: uppercase;
         font-size: 48px;
         font-weight: normal;
         line-height: 1.3em;
@@ -128,6 +143,7 @@ ol {
          font-size: 38px;
         font-family: 'Gotham Bold';
          color: @rosa;
+        text-transform: uppercase;
     }
     p,
     ul,a {
@@ -184,9 +200,10 @@ ol {
   
 
     .btn {
+        
         transition: all 0.3s ease-in-out;
          font-family: 'Gotham Light';
-            text-transform: none;
+           text-transform: uppercase;
             font-size: 1.8em;
  //        -webkit-border-radius: 10px;
 //  -moz-border-radius: 10px;
@@ -204,6 +221,12 @@ ol {
     .center {
         text-align: center;
     }
+}
+section#slide2 {
+    display: none;
+}
+section#valores2 {
+    display: none;
 }
 #organiza{
     background: url(../img/fondo1.png) no-repeat center;
@@ -375,9 +398,11 @@ ol {
     left: 40px;
     }
 }
-
+footer.template-section {
+    padding: inherit;
+}
 #esbrillante{
-        margin-bottom: -65px;
+       margin-bottom: -20px;
     padding: 20px 0;
     background-color: @gris;
     
@@ -390,7 +415,7 @@ ol {
 }
 
 #conocenos2 {
-    margin-top: -7px;
+   
         padding: inherit;
     background-color: @blanco;
     .fondo {
@@ -411,7 +436,9 @@ ol {
             left: -100px;
         }
     }
-
+    .col{
+            min-height: 650px;
+    }
     p {
       text-align: justify;
     max-width: 550px;
@@ -423,13 +450,19 @@ ol {
 }
 
 #conocenos3 {
-    margin-top: -7px;
+   
         padding: inherit;
     background-color: @blanco;
+    .col{
+            height: 650px;
+    }
     .fondo {
        background: url(../img/2Mision.jpg) no-repeat center;
     }
-
+    .fondo2{
+            position: relative;
+    top: 94px;
+    }
     h2 {
        margin-top: 40px;
     max-width: 550px;
@@ -474,6 +507,7 @@ ol {
         padding-top: 184px;
         h2{
             margin-bottom: 20px;
+                text-transform: inherit;
         }
     }
     
@@ -508,7 +542,101 @@ ol {
     h3{
             font-size: 20px;
     }
+   
+}
+
+/***popup**/
+#popup{
+    background: url(../img/3-Paquetes.jpg) no-repeat center;
+    .col3{
+        padding: inherit;
+        background: url(../img/paquete.jpg) no-repeat center;
+        background-size: cover;
+        min-height: 400px;
+        width: 24.8%;
+            margin: auto;
+    }
     h3{
-            text-transform: uppercase;
+        color: @dorado;
+        text-align: center;
+    font-size: 20px;
+    position: relative;
+    top: 30px;
+    }
+    .ban{
+        background-color: @dorado;
+            padding: 2px;
+    position: relative;
+    top: 119px;
+        h2{
+            font-family: 'Amarillo';
+            color: white;
+                text-transform: lowercase;
+                font-size: 40px;
+        }
+    }
+    
+    .popupaoc-image-popup {
+    /* display: block; */
+    /* margin: auto; */
+    text-align: center;
+        position: relative;
+        top: 150px;
+}
+    p.blanco {
+       max-width: 1000px;
+    text-align: justify;
+    margin: 20px auto;
+}
+   
+    
+}
+#popup2{
+    padding: inherit;
+    h2{
+            font-size: 40px;
+    }
+    .ban1{
+        background-color: @dorado;
+        padding: 30px;
+    }
+    p{
+        text-align: center;
+    }
+    .ban2{
+        background-color: #ff918a;
+        padding: 10px;
+    position: relative;
+    top: -1px;
+    }
+    .ban3{
+            padding: 60px;
+    }
+    
+}
+div#paoc-modal-1 {
+    
+    flex-basis: 80%!important;
+}
+    a.paoc-popup-close.paoc-close-popup {
+    background: url(https://lmeventos.com.mx/wp-content/uploads/2020/07/tache.png) center center no-repeat;
+}
+.paoc-popup-modal-cnt {
+    padding: inherit;
+}
+    
+#fuera{
+    padding: 100px 0;
+     background: url(../img/4-Fuera.jpg) no-repeat center;
+    background-size: cover;
+    p {
+    text-align: justify;
+        text-align-last: center;
+}
+    .contenedor{
+        max-width: 550px;
     }
 }
+
+
+@import "responsive";
