--- a/less/main.css
+++ b/less/main.css
@@ -184,6 +184,9 @@ section#slide2 {
 section#valores2 {
   display: none;
 }
+section.movil {
+  display: none;
+}
 #organiza {
   background: url(../img/fondo1.png) no-repeat center;
   /* background-size: cover; */
@@ -270,6 +273,7 @@ section#valores2 {
   display: block;
   margin: auto;
   margin-bottom: 50px;
+  max-width: 50%;
 }
 #conocenos p {
   text-align: justify;
@@ -637,6 +641,12 @@ a.paoc-popup-close.paoc-close-popup {
   section#valores2 {
     display: inherit;
   }
+  section.movil {
+    display: inherit;
+  }
+  section.lap {
+    display: none;
+  }
   #galeria {
     margin-top: -57px;
   }
@@ -656,6 +666,7 @@ a.paoc-popup-close.paoc-close-popup {
   }
   #conocenos img {
     margin-bottom: 0px;
+    max-width: 70%;
   }
   #conocenos h2 {
     position: relative;
