--- a/less/main.less
+++ b/less/main.less
@@ -228,6 +228,9 @@ section#slide2 {
 section#valores2 {
     display: none;
 }
+section.movil {
+    display: none;
+}
 #organiza{
     background: url(../img/fondo1.png) no-repeat center;
    //background-color: @rosa;
@@ -326,6 +329,7 @@ section#valores2 {
         display: block;
     margin: auto;
     margin-bottom: 50px;
+            max-width: 50%;
     }
     p{
         text-align: justify;
@@ -637,6 +641,7 @@ div#paoc-modal-1 {
         max-width: 550px;
     }
 }
+
 
 
 @import "responsive";
