--- a/less/responsive.less
+++ b/less/responsive.less
@@ -101,6 +101,12 @@
     section#valores2 {
     display: inherit;
 }
+     section.movil {
+    display: inherit;
+}
+     section.lap {
+    display: none;
+}
    
     
    #galeria {
@@ -125,6 +131,9 @@
 }
         img{
             margin-bottom: 0px;
+           
+    max-width: 70%;
+
         }
         h2{
             position: relative;
