--- a/less/responsive.less
+++ b/less/responsive.less
@@ -13,7 +13,7 @@
     /*LOGO*/
     .woodmart-logo img {
    padding-top: 0;
-    transform: scale(1.7) translateY(0px);
+    transform: scale(1) translateY(0px);
 }
     
     //Fix slide
@@ -249,4 +249,13 @@
     }
     
 }
+    #conocenos2 {
+   
+     
+    .fondo {
+       
+       background: url(../img/1Conocenosmovil.jpg) no-repeat center;
+      
+    }
+    }
 }
